<resources>
    <string name="app_name">MnsApp</string>
    <string name="search">Buscar</string>
    <string name="add">Agregar</string>
    <string name="more_options">Mas informacion</string>
    <string name="option_1">Opcion 1</string>
    <string name="option_2">Opcion 2</string>
    <string name="option_3">Opcion 3</string>
    <string name="select_option_1">Seleccionaste opcion 1 </string>
    <string name="select_option_2">Seleccionaste opcion 2</string>
    <string name="select_option_3">Seleccionaste opcion 3 </string>
</resources>