<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_more_vert"
        android:title="@string/more_options"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_option1"
                android:title="@string/option_1" />
            <item
                android:id="@+id/action_option2"
                android:title="@string/option_2" />
            <item
                android:id="@+id/action_option3"
                android:title="@string/option_3" />
        </menu>
    </item>
</menu>